@@ -1,5 +1,5 @@
 ; Simulator generator support routines.
-; Copyright (C) 2000, 2001, 2002 Red Hat, Inc.
+; Copyright (C) 2000, 2001, 2002, 2006 Red Hat, Inc.
 ; This file is part of CGEN.
 
 ; One goal of this file is to provide cover functions for all methods.
@@ -1476,7 +1476,9 @@
 			 (if (null? timing)
 			     '(1)
 			     (map (lambda (insn-timing)
-				    (length (timing:units (cdr insn-timing))))
+				    (if (null? (cdr insn-timing))
+					'1
+					(length (timing:units (cdr insn-timing)))))
 				  timing))))
 		     (current-insn-list)))))
    ")\n\n"
