@@ -1,5 +1,8 @@
 2006-05-09  Dave Brolley  <brolley@redhat.com>
 
+	* sid-model.scm (-gen-model-class-decls): Handle the case where insn-timing
+	is null.
+	* sim.scm (-gen-arch-model-decls): Likewise.
 	* sid-cpu.scm (-gen-scache-semantic-fn): Generate code to set
 	abuf->written if profiling.
 	* read.scm (include): Use arch-path as file location.
